@@ -2,6 +2,7 @@ Changes in Release 2.1.4
 =============================================
 [SIDP-340] - Default tc-config.xml causes TCNonPortableObjectError
 [SIDP-348] - Remove Terracotta Configuration from IdP Install
+[SIDP-249] - LoginContext is not removed from StorageService after Authentication Completes
 
 Changes in Release 2.1.3
 =============================================
